--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.1",
+    "bootstrap": "^5.3.3",
+    "leaflet": "^1.9.4",
+    "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "react-hook-form": "^7.51.2",
+    "sass": "^1.72.0",
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
+    "@types/react": "^18.2.72",
     "eslint": "^8",
     "eslint-config-next": "14.1.4"
   }
