--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@iconify/react": "^4.1.1",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
     "next": "14.1.4",
